[metadata]
name = amulet-runtime-final
version = attr: runtime_final.__version__
url = https://github.com/Amulet-Team/runtime-final
author = James Clare, izxxr
author_email = amuleteditor@gmail.com
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
description = Declare final Python classes and methods at runtime.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
license = MIT


[options]
package_dir=
    =src
py_modules = runtime_final
python_requires = ~=3.6

